# cog-stable-diffusion

./: .dockerignore  .gitignore  Dockerfile  README.md  cog.yaml  config.py  convert_safetensors.py  depedency_splitter.py  depends.py  dev.ipynb  diffusers-requirements.txt  get_profile_stats.sh  http.py  image_to_image.py  install_profiler.sh  maybe_nvtx.py  other-requirements.txt  poetry-requirements.txt  predict.py  profile_stats.py  profile_stats_summary.txt  pyproject.toml  requirements.in  requirements.txt  safetensors_convert.py  setup_test.py  strace_script.sh  test_load.py  torch-requirements.txt  trace_unet.py  version.py  weights_downloader.py
.github/workflows/: ci.yaml  push-to-replicate.yaml  release.yml
cog-overwrite/: __init__.py  http.py  predictor.py  types.py
load_time_tests/: Makefile  convert.py  prepare_model_files.py  sd_load_time_tests.py  unet_load_time_tests.py
script/: download-weights  trace_unet.py
src/: tensorizer_diffusion_pipeline.py
